apps/base/selfhosted/proxitok/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxitok-ingress
  namespace: selfhosted
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: tok.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "600" #optional  
spec:
  rules:
    - host: tok.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxitok
                port:
                  number: 80
  tls:
    - secretName: proxitok-tls
      hosts:
        - tok.thekitty.zone
